--- a/contact/whoweare.html
+++ b/contact/whoweare.html
@@ -13,14 +13,6 @@
 </head>
 
 <body>
-		<div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.9&appId=567626093627040";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
@@ -31,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active" role="presentation"><a href="index.html" style="color:#e2001d;">HOME </a></li>
-                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
@@ -53,16 +45,26 @@
                     <p class="lead">is the newly founded charity organisation set up to organise cultural and educational activities to promote Korean culture in the UK, especially in the Kingston area.The aims and objectives are to help to understand each other’s culture,
                         to exchange and embrace each other’s culture so that we are happier together in the neighborhood and to lead to more cooperation between the communities through artistic collaboration. </p>
                     <p class="lead">Follow us on our Social media platforms</p>
-                    <a type="button" class="btn col-md-6" href="https://www.facebook.com/KBCE.Official"><img src="../assets/img/logo_facebook.png"><h4><small>KBCE.Offcial</small></h4></a>
-                    <a type="button" class="btn col-md-6" href="https://www.instagram.com/_kbce/"><img src="../assets/img/logo_insta.png""><h4><small>_KBCE</small></h4></a>
+                    <p class="lead"><img src="../assets/img/logo_facebook.png" style="width:50px;margin:0px;margin-right:10px;margin-left:0px;"><img src="../assets/img/logo_insta.png" style="width:50px;"></p>
                 </div>
                 <div class="col-md-6">
                     <div class="contact-clean" style="padding-top:0px;padding-bottom:0px;background-color:#ffffff;width:600;">
                         <form method="post" style="margin-right:0px;margin-left:0px;width:600;max-width:600px;">
                             <h2 class="text-left" style="margin-bottom:5px;">CONTACT</h2>
-                            <p class="lead">If you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p>
+                            <p class="lead">f you like to have more information about KBCE (Korean British Cultural Exchange) and its activities,&nbsp;please fill out the form below. </p>
+                            <div class="form-group has-success has-feedback">
+                                <input class="form-control" type="text" name="name" placeholder="Name"><i class="form-control-feedback glyphicon glyphicon-ok" aria-hidden="true"></i></div>
+                            <div class="form-group has-error has-feedback">
+                                <input class="form-control" type="email" name="email" placeholder="Email"><i class="form-control-feedback glyphicon glyphicon-remove" aria-hidden="true"></i>
+                                <p class="help-block">Please enter a correct email address.</p>
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control" rows="14" name="message" placeholder="Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-primary" type="submit">send </button>
+                            </div>
                         </form>
-												<div class="fb-comments" data-href="https://www.facebook.com/KBCE.Official/" data-numposts="5" data-mobile="true" width="100%"></div>
                     </div>
                 </div>
             </div>
