--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/css/swiper.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+<script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.9&appId=567626093627040";
+        fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+</script>
 </head>
 
 <body>
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-			var js, fjs = d.getElementsByTagName(s)[0];
-			if (d.getElementById(id)) return;
-			js = d.createElement(s); js.id = id;
-			js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.9&appId=567626093627040";
-			fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
     <div>
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active" role="presentation"><a href="index.html" style="color:#e2001d;">HOME </a></li>
-                        <li class="dropdown open"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
+                        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" href="festival/festival.html">FESTIVAL <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu">
                                 <li role="presentation"><a href="festival/festival.html">FESTIVAL </a></li>
                                 <li role="presentation"><a href="festival/exhibition.html">EXHIBITION </a></li>
@@ -46,53 +46,49 @@
             </div>
         </nav>
     </div>
-    <div class="container post">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
-                    <div class="carousel-inner" role="listbox">
-                        <div class="item active"><img class="img-responsive" src="assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_03.jpg" alt="Slide Image" style="width:1140px;"></div>
-                        <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_04.jpg" alt="Slide Image" style="width:1140px;"></div>
+    <div>
+        <div class="container post">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="carousel slide" data-ride="carousel" id="carousel-1" style="width:940;">
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active"><img class="img-responsive" src="assets/img/main/home_sliding-banner_01.jpg" alt="Slide Image" style="width:1140px;height:auto;"></div>
+                            <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_02.jpg" alt="Slide Image" style="width:1140px;"></div>
+                            <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_03.jpg" alt="Slide Image" style="width:1140px;"></div>
+                            <div class="item"><img class="img-responsive" src="assets/img/main/home_sliding-banner_04.jpg" alt="Slide Image" style="width:1140px;"></div>
+                        </div>
+                        <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button"
+                            data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-1" data-slide-to="1"></li>
+                            <li data-target="#carousel-1" data-slide-to="2"></li>
+                            <li data-target="#carousel-1" data-slide-to="3"></li>
+                        </ol>
                     </div>
-                    <div><a class="left carousel-control" href="#carousel-1" role="button" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i><span class="sr-only">Previous</span></a><a class="right carousel-control" href="#carousel-1" role="button"
-                        data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i><span class="sr-only">Next</span></a></div>
-                    <ol class="carousel-indicators">
-                        <li data-target="#carousel-1" data-slide-to="0" class="active"></li>
-                        <li data-target="#carousel-1" data-slide-to="1"></li>
-                        <li data-target="#carousel-1" data-slide-to="2"></li>
-                        <li data-target="#carousel-1" data-slide-to="3"></li>
-                    </ol>
                 </div>
             </div>
-            <div class="col-md-6 post-title"></div>
-            <div class="col-md-12"></div>
-        </div>
-    </div>
-    <div class="container post">
-        <div class="row">
-            <div class="col-md-6 col-xs-12 clearfix center-block">
-								<div class="col-md-12">
-										<a type="button" class="btn col-md-12" href="https://www.facebook.com/KBCE.Official">
-											<img src="assets/img/logo_facebook.png">
-											<h4>FACEBOOK <small>KBCE.Official</small></h4>
-										</a>
-								</div>
-								<div class="col-md-12">
-										<div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official">KBCE</a></blockquote></div>
-								</div>
-            </div>
-            <div class="col-md-6 col-xs-12 clearfix center-block">
-								<div class="col-md-12">
-										<a type="button" class="btn col-md-12" href="https://www.instagram.com/_kbce/">
-											<img src="assets/img/logo_insta.png">
-											<h4>INSTAGRAM <small>_KBCE</small></h4>
-										</a>
-								</div>
-								<div class="col-md-12">
-										Instagram here
-								</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Facebook </h1></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="fb-page" data-href="https://www.facebook.com/KBCE.Official" data-tabs="timeline" data-width="450" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/KBCE.Official" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/KBCE.Official">KBCE</a></blockquote></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h1>Instagram </h1></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
