--- a/home/home.html
+++ b/home/home.html
@@ -30,7 +30,7 @@
         <nav class="navbar navbar-default navigation-clean">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand navbar-link" href="#"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
+                    <a class="navbar-brand navbar-link" href="../home/home.html"><img src="../assets/img/main/logo.png" style="width:184px;height:41px;"></a>
                     <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
